# o1-engineer

./: .gitignore  README.md  grok-eng.py  main.py  o1-eng.py  o1-eng_OR.py  pyproject.toml  requirement.txt  requirements.txt
o1_engineer/: o1_eng.py
