[tool.poetry]
name = "o1-engineer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "o1_engineer"}]


[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.50.2"
termcolor = "^2.4.0"
prompt-toolkit = "^3.0.48"
rich = "^13.8.1"

[tool.poetry.scripts]
o1-engineer = "o1_engineer.o1_eng:main"

[tool.poetry.group.dev.dependencies]
pipx = "^1.2.0"

[tool.poetry.scripts]
install-with-pipx = "scripts.install_with_pipx:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
